==> dogotic/ARDUCAM_STM32_GCC/SDCard_FatFS/SDCARD_FatFS/ARDUCAM/ArduCAM.c <==
#include <stdint.h>
#include "stm32f1xx_hal.h"
#include "main.h"
#include "ArduCAM.h"
#include "ov2640_regs.h"
#include "ov5642_regs.h"
#include "ov5640_regs.h"
#include "delay.h"

void CS_HIGH(void)
{
	//GPIO_SetBits(CS_PORT, CS_PIN);
	HAL_GPIO_WritePin(CAMERA_CS_GPIO_Port,CAMERA_CS_Pin,GPIO_PIN_SET);
}

void CS_LOW(void)
{
	//GPIO_ResetBits(CS_PORT, CS_PIN);
	HAL_GPIO_WritePin(CAMERA_CS_GPIO_Port,CAMERA_CS_Pin,GPIO_PIN_RESET);
}

uint8_t bus_read(int address)
{
	CS_LOW();
	// SPI1_ReadWriteByte(address);
	// value = SPI1_ReadWriteByte(0x00);
	HAL_SPI_Transmit(&CAMERA_SPI_HANDLE,(uint8_t *)&address,1,50);
	uint8_t tx_data = 0x00;
	uint8_t rx_data;
	HAL_SPI_TransmitReceive(&CAMERA_SPI_HANDLE,&tx_data,&rx_data,1,50);
	CS_HIGH();
	return rx_data;
}

uint8_t bus_write(int address, int value)
{
	CS_LOW();
	HAL_SPI_Transmit(&CAMERA_SPI_HANDLE,(uint8_t *)&address,1,50);
	HAL_SPI_Transmit(&CAMERA_SPI_HANDLE,(uint8_t *)&value,1,50);
	CS_HIGH();
	return 1;
}

void set_fifo_burst()
{
	//SPI1_ReadWriteByte(BURST_FIFO_READ);
	uint8_t tx_data = BURST_FIFO_READ;
	HAL_SPI_Transmit(&CAMERA_SPI_HANDLE,(uint8_t *)&tx_data,1,50);
}

void OV2640_set_JPEG_size(uint8_t size)
{
	switch (size)
	{
	case OV2640_160x120:
		wrSensorRegs8_8(OV2640_160x120_JPEG);
		break;
	case OV2640_176x144:
		wrSensorRegs8_8(OV2640_176x144_JPEG);
		break;
	case OV2640_320x240:
		wrSensorRegs8_8(OV2640_320x240_JPEG);
		break;
	case OV2640_352x288:
		wrSensorRegs8_8(OV2640_352x288_JPEG);
		break;
	case OV2640_640x480:
		wrSensorRegs8_8(OV2640_640x480_JPEG);
		break;
	case OV2640_800x600:
		wrSensorRegs8_8(OV2640_800x600_JPEG);
		break;
	case OV2640_1024x768:
		wrSensorRegs8_8(OV2640_1024x768_JPEG);
		break;
	case OV2640_1280x1024:
		wrSensorRegs8_8(OV2640_1280x1024_JPEG);
		break;
	case OV2640_1600x1200:
		wrSensorRegs8_8(OV2640_1600x1200_JPEG);
		break;
	default:
		wrSensorRegs8_8(OV2640_320x240_JPEG);
		break;
	}
}

byte wrSensorReg8_8(int regID, int regDat)
{
	uint8_t data[2] = {regID,regDat};
	HAL_I2C_Master_Transmit(&CAMERA_I2C_HANDLE,sensor_addr,data,2,100);
	return 0;
	/*
	delay_us(5);
	sccb_bus_start();
	if (sccb_bus_write_byte(sensor_addr) == 0)
	{
		sccb_bus_stop();
		return 1;
	}
	delay_us(5);
	if (sccb_bus_write_byte(regID) == 0)
	{
		sccb_bus_stop();
		return 2;
	}
	delay_us(5);
	if (sccb_bus_write_byte(regDat) == 0)
	{
		sccb_bus_stop();
		return 3;
	}
	sccb_bus_stop();
	return 0;
	*/
}

byte rdSensorReg8_8(uint8_t regID, uint8_t *regDat)
{
	/*
	delay_us(10);

	sccb_bus_start();
	if (sccb_bus_write_byte(sensor_addr) == 0)
	{
		sccb_bus_stop();
		// goto start;
		return 1;
	}
	delay_us(10);
	if (sccb_bus_write_byte(regID) == 0) // ID
	{
		sccb_bus_stop();
		// goto start;
		return 2;
	}
	sccb_bus_stop();
	delay_us(10);
	sccb_bus_start();
	if (sccb_bus_write_byte(sensor_addr | 0x01) == 0)
	{
		sccb_bus_stop();
		// goto start;
		return 3;
	}
	delay_us(10);
	*regDat = sccb_bus_read_byte();
	sccb_bus_send_noack();
	sccb_bus_stop();
	*/
	HAL_I2C_Master_Transmit(&CAMERA_I2C_HANDLE,sensor_addr,&regID,1,100);
	HAL_I2C_Master_Receive(&CAMERA_I2C_HANDLE,sensor_addr,regDat,1,100);
	return 0;
}

byte wrSensorReg16_8(int regID, int regDat)
{
	uint8_t tx_data[3] = {regID,regID >> 8, regDat};
	/*
	sccb_bus_start();
	if (0 == sccb_bus_write_byte(sensor_addr))
	{
		sccb_bus_stop();
		return (0);
	}
	delay_us(5);
	if (0 == sccb_bus_write_byte(regID >> 8))
	{
		sccb_bus_stop();
		return (0);
	}
	delay_us(5);
	if (0 == sccb_bus_write_byte(regID))
	{
		sccb_bus_stop();
		return (0);
	}
	delay_us(5);
	if (0 == sccb_bus_write_byte(regDat))
	{
		sccb_bus_stop();
		return (0);
	}
	sccb_bus_stop();
	*/
	HAL_I2C_Master_Transmit(&CAMERA_I2C_HANDLE,sensor_addr,tx_data,3,100);

	return (1);
}

byte rdSensorReg16_8(uint16_t regID, uint8_t *regDat)
{
	uint8_t txdata[2] = {regID >> 8,regID};
	HAL_I2C_Master_Transmit(&CAMERA_I2C_HANDLE,sensor_addr,txdata,2,100);
	HAL_I2C_Master_Receive(&CAMERA_I2C_HANDLE,sensor_addr,regDat,1,100);
	/*
	sccb_bus_start();
	if (0 == sccb_bus_write_byte(0x78))
	{
		sccb_bus_stop();
		return (0);
	}
	delay_us(20);
	delay_us(20);
	if (0 == sccb_bus_write_byte(regID >> 8))
	{
		sccb_bus_stop();
		return (0);
	}
	delay_us(20);
	if (0 == sccb_bus_write_byte(regID))
	{
		sccb_bus_stop();
		return (0);
	}
	delay_us(20);
	sccb_bus_stop();

	delay_us(20);

	sccb_bus_start();
	if (0 == sccb_bus_write_byte(0x79))
	{
		sccb_bus_stop();
		return (0);
	}
	delay_us(20);
	*regDat = sccb_bus_read_byte();
	sccb_bus_send_noack();
	sccb_bus_stop();
	*/

	return (1);
}
